# ForkerPathTracer

./: .gitignore  CMakeLists.txt  README.md
src/common/: check.h  color.cpp  color.h  common.cpp  common.h  constant.h  geometry.h  utility.h
src/core/: bounds.h  bvh.cpp  bvh.h  camera.h  core.cpp  core.h  hittable.h  loader.cpp  loader.h  material.h  plane.h  ray.h  rectangle.h  scene.cpp  scene.h  sphere.h  triangle.cpp  triangle.h
src/main/: main.cpp
src/test/: test.cpp
